--- a/public/admin/main/view/index/index.html
+++ b/public/admin/main/view/index/index.html
@@ -11,76 +11,85 @@
 <!-- Content area -->
 <div class="content">
 
+    <h6 class="content-group text-semibold">
+        介绍
+        <small class="display-block">Alpaca-spa.js是一款轻量的前端JS框架，提供前端路由功能，前端视图渲染功能，前端套页面功能。目的是用来提高web项目的开发效率，前后端分离开发，同时使前端代码结构更加整洁。Alpaca-spa.js 区别于其他框架的主要特点是轻巧灵活，学习成本低。框架没有复杂的概念与特性，几乎都是最基本的JavaScript语法，也就是说读者只要有JavaScript语言基础，就能很快学会使用 Alpaca-spa.js框架，这是一个后台管理系统的DEMO，使用PHP-Laravel（服务后台） + LimitLess（前台样式）+Alpaca-Spa（前台逻辑）开发完成，主要功能模块有登录、定时任务管理、用户管理、权限管理、个人信息管理等。在实际开发中可以根据具体的需求添加新的功能。
+            当前登录账号是一个测试帐号，权限只有浏览功能，没有编辑等修改功能</small>
+    </h6>
+    <h6 class="content-group text-semibold">
+        源码地址
+        <small class="display-block"> 点击下面的按钮可以直接跳转</small>
+    </h6>
     <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h6 class="panel-title">源码地址<a class="heading-elements-toggle"><i class="icon-more"></i></a></h6>
-
-                </div>
-
-                <div class="panel-body">
-                    <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Alpaca-Spa-Laravel :<br><br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        码云 : &nbsp;&nbsp;<a href="http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel" target="_blank">http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel</a><br><br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Github: &nbsp;&nbsp;<a href="https://github.com/big-sponge/Alpaca-Spa-Laravel" target="_blank">https://github.com/big-sponge/Alpaca-Spa-Laravel</a><br><br>
-                    </p>
-                    <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Alpaca-Spa :<br><br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        码云 : &nbsp;&nbsp;<a href="https://gitee.com/cc-sponge/alpaca-spa-2.0" target="_blank">https://gitee.com/cc-sponge/alpaca-spa-2.0</a><br><br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Github: &nbsp;&nbsp;<a href="https://github.com/big-sponge/Alpaca-Spa-2.0" target="_blank">https://github.com/big-sponge/Alpaca-Spa-2.0</a><br><br>
-                    </p>
-                </div>
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">Alpaca-Spa-Laravel </h6>
+                <p class="content-group-sm text-muted">码云 <a href="http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel" target="_blank">http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel</a></p>
+                <button type="button" class="btn btn-success" onclick='window.location.href="http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel";'>前往</button>
             </div>
         </div>
-
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h6 class="panel-title">Alpaca-Spa 介绍<a class="heading-elements-toggle"><i class="icon-more"></i></a></h6>
-
-                </div>
-
-                <div class="panel-body">
-                    <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Alpaca-spa.js是一款轻量的前端JS框架，提供前端路由功能，前端视图渲染功能，前端套页面功能。目的是用来提高web项目的开发效率，前后端分离开发，同时使前端代码结构更加整洁。
-                    </p>
-
-                    <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Alpaca-spa.js 区别于其他框架的主要特点是轻巧灵活，学习成本低。框架没有复杂的概念与特性，几乎都是最基本的JavaScript语法，也就是说读者只要有JavaScript语言基础，就能很快学会使用 Alpaca-spa.js框架。
-                    </p>
-                </div>
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">Alpaca-Spa-Laravel </h6>
+                <p class="content-group-sm text-muted">Github <a href="https://github.com/big-sponge/Alpaca-Spa-Laravel" target="_blank">https://github.com/big-sponge/Alpaca-Spa-Laravel</a></p>
+                <button type="button" class="btn btn-success" onclick='window.location.href="https://github.com/big-sponge/Alpaca-Spa-Laravel";'>前往</button>
             </div>
         </div>
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h6 class="panel-title">Alpaca-Spa + LL 介绍<a class="heading-elements-toggle"><i class="icon-more"></i></a></h6>
-
-                </div>
-
-                <div class="panel-body">
-                    <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        这是一个后台管理系统的DEMO，使用PHP-Laravel（服务后台） + LimitLess（前台样式）+Alpaca-Spa（前台逻辑）开发完成，主要功能模块有登录、定时任务管理、用户管理、权限管理、个人信息管理等。在实际开发中可以根据具体的需求添加新的功能。
-                    </p>
-
-                    <p>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        当前登录账号是一个测试帐号，权限只有浏览功能，没有编辑等修改功能。
-                    </p>
-                </div>
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">Alpaca-Spa  </h6>
+                <p class="content-group-sm text-muted">码云 <a href="https://gitee.com/cc-sponge/alpaca-spa-2.0" target="_blank">https://gitee.com/cc-sponge/alpaca-spa-2.0</a></p>
+                <button type="button" class="btn btn-success" onclick='window.location.href="https://gitee.com/cc-sponge/alpaca-spa-2.0";'>前往</button>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">Alpaca-Spa  </h6>
+                <p class="content-group-sm text-muted">Github <a href="https://github.com/big-sponge/Alpaca-Spa-2.0" target="_blank">https://github.com/big-sponge/Alpaca-Spa-2.0</a></p>
+                <button type="button" class="btn btn-success" onclick='window.location.href="https://github.com/big-sponge/Alpaca-Spa-2.0";'>前往</button>
+            </div>
+        </div>
+    </div>
+
+    <h6 class="content-group text-semibold">
+        个人信息
+        <small class="display-block">点击下面的按钮可以进入对应的管理模块</small>
+    </h6>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">个人信息</h6>
+                <p class="content-group-sm text-muted">查看自己的信息</p>
+                <button type="button" class="btn btn-success" onclick='Alpaca.to("#/main/auth/myInfoView")'>前往</button>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">修改密码</h6>
+                <p class="content-group-sm text-muted">修改登录密码</p>
+                <button type="button" class="btn btn-success" onclick='Alpaca.to("#/main/auth/resetPasswordView")'>前往</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- /main charts -->
+    <h6 class="content-group text-semibold">
+        用户管理
+        <small class="display-block">点击下面的按钮可以进入对应的管理模块</small>
+    </h6>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-body border-top-primary text-center">
+                <h6 class="no-margin text-semibold">用户管理-用户</h6>
+                <p class="content-group-sm text-muted">管理用户信息，添加、编辑、删除用户、控制用户登录权限等</p>
+                <button type="button" class="btn btn-success" onclick='Alpaca.to("#/main/admin/memberListView")'>前往</button>
+            </div>
+        </div>
+    </div>
+
     <!-- /main charts -->
 
     <!-- Footer -->
